# whisper-encoder-layer-prune

./: .gitignore  AGENT.md  DESIGN.md  EXPERIMENTS.md  FINDINGS.md  README.md  analysis.ipynb  benchmark_pruned.py  compute_layer_metrics.py  distill_pruned_encoder.py  eval.ipynb  job_script.sh  pyproject.toml  time_estimate.py
jobs/: distill.sh  distill_k10.sh  distill_k6_rerun.sh  distill_option_a.sh  distill_option_a_l40s.sh  distill_option_b.sh  distill_option_c.sh
results/: baseline_wers.json  delta_wers.json  distillation_log.json  distillation_log_1_2_3_4_5_6.json  distillation_log_2_3_4_5_6_7.json  distillation_log_2_4_5_6_7_8_9_10_11_13.json  distillation_log_2_4_8_13_14_17.json  distillation_log_5_6_7_9_10_11_lora16.json  proxy_metrics.json  prune_sweep.json  prune_sweep_delta_wer.json
