[project]
name = "whisper-encoder-layer-prune"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.4",
    "ipython>=9.12.0",
    "jiwer>=4.0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "peft>=0.19.1",
    "scipy>=1.17.1",
    "torch>=2.11.0",
    "torchcodec>=0.11.1",
    "transformers>=5.5.4",
]
